--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Aggro | 월간 게임 리뷰 포럼</title>
+    <title>Aggro</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="main.js" defer></script>
@@ -11,7 +11,7 @@
 <body>
     <header>
         <a href="index.html">
-            <div id="logo">Aggro</div>
+            <div id="logo">Aggro | 월간 게임 리뷰 포럼</div>
         </a>
 
         <form id="search">
