--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
         <nav id="head_nav">
             <ul>
-                <li><a href="index.html">home</a></li>
-                <li>favorite</li>
-                <li>about</li>
-                <li>setting</li>
+                <li><a href="index.html">Home</a></li>
+                <li>Favorite</li>
+                <li>About</li>
+                <li>Settings</li>
             </ul>
         </nav>
         <div id="my_page">
