--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
         <section id="topics_section">
             <div id="topics_header">
-                <h1 id="top">Topics</h1>
+                <h1 id="top">Games of the Month</h1>
                 <span id="num">10개</span>
             </div>
             <hr>
