--- a/index.html
+++ b/index.html
@@ -41,45 +41,37 @@
             </div>
             <hr>
             <div id="topics_img">
-                <a href="topic1.html" class="topic">
-                    <img src="img/rythm_game.jpg" alt="Topic Image">
-                    <div class="topic_title" id="topic1">리듬 게임</div>
+                <a href="topic1.html#game1" class="topic">
+                    <img src="img/osu!.png" alt="Topic Image">
+                    <div class="topic_title" id="topic1">Osu!</div>
                 </a>
-                <a href="topic2.html" class="topic">
-                    <img src="img/fps.webp" alt="Topic Image">
-                    <div class="topic_title" id="topic2">Title2</div>
+                <a href="topic1.html#game2" class="topic">
+                    <img src="img/arcaea.png" alt="Topic Image">
+                    <div class="topic_title" id="topic2">arcaea</div>
                 </a>
-                <a href="topic3.html" class="topic">
-                    <img src="img/fps.webp" alt="Topic Image">
-                    <div class="topic_title" id="topic3">Title3</div>
+                <a href="topic1.html#game3" class="topic">
+                    <img src="img/djmax.jpg" alt="Topic Image">
+                    <div class="topic_title" id="topic3">DJmax</div>
                 </a>
-                <a href="notyet.html" class="topic">
+                <a href="202434610.html#six" class="topic">
                     <img src="img/fps.webp" alt="Topic Image">
-                    <div class="topic_title" id="topic4">Title4</div>
+                    <div class="topic_title" id="topic4">Six days in Fallujah</div>
                 </a>
-                <a href="notyet.html" class="topic">
+                <a href="202434610.html#zomboid" class="topic">
                     <img src="img/fps.webp" alt="Topic Image">
-                    <div class="topic_title" id="topic5">Title5</div>
+                    <div class="topic_title" id="topic5">Project Zomboid</div>
                 </a>
-                <a href="notyet.html" class="topic">
+                <a href="flatformer.html#sannabi" class="topic">
                     <img src="img/fps.webp" alt="Topic Image">
-                    <div class="topic_title" id="topic6">Title6</div>
+                    <div class="topic_title" id="topic6">sannabi</div>
                 </a>
-                <a href="notyet.html" class="topic">
+                <a href="flatformer.html#skul" class="topic">
                     <img src="img/fps.webp" alt="Topic Image">
-                    <div class="topic_title" id="topic7">Title7</div>
+                    <div class="topic_title" id="topic7">skul</div>
                 </a>
-                <a href="notyet.html" class="topic">
+                <a href="flatformer.html#myfriendpedro" class="topic">
                     <img src="img/fps.webp" alt="Topic Image">
-                    <div class="topic_title" id="topic8">Title8</div>
-                </a>
-                <a href="notyet.html" class="topic">
-                    <img src="img/fps.webp" alt="Topic Image">
-                    <div class="topic_title" id="topic9">Title9</div>
-                </a>
-                <a href="notyet.html" class="topic">
-                    <img src="img/fps.webp" alt="Topic Image">
-                    <div class="topic_title" id="topic10">Title10</div>
+                    <div class="topic_title" id="topic8">myfriendpedro</div>
                 </a>
             </div>
 
