--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                     <img src="img/djmax.jpg" alt="Topic Image">
                     <div class="topic_title" id="topic3">DJmax</div>
                 </a>
-                <a href="202434610.html#six" class="topic">
+                <a href="PSH.html#six" class="topic">
                     <img src="img/fps.webp" alt="Topic Image">
                     <div class="topic_title" id="topic4">Six days in Fallujah</div>
                 </a>
-                <a href="202434610.html#zomboid" class="topic">
+                <a href="PSH.html#zomboid" class="topic">
                     <img src="img/fps.webp" alt="Topic Image">
                     <div class="topic_title" id="topic5">Project Zomboid</div>
                 </a>
