--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                     <div class="topic_title" id="topic3">DJmax</div>
                 </a>
                 <a href="PSH.html#six" class="topic">
-                    <img src="https://steamuserimages-a.akamaihd.net/ugc/2029482671344380284/5B9AF95B80CF05BDCE7EED73AF31608DDF1E41D8/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false" alt="Topic Image">
+                    <img src="https://assets-global.website-files.com/5ffc95f07e6b467ddb648214/602348749e3258b3d145569e_SDIF_PhoneHeader.jpg" alt="Topic Image">
                     <div class="topic_title" id="topic4">Six days in Fallujah</div>
                 </a>
                 <a href="PSH.html#zomboid" class="topic">
-                    <img src="https://shared.cloudflare.steamstatic.com/store_item_assets/steam/apps/108600/capsule_616x353.jpg?t=1691508011" alt="Topic Image">
+                    <img src="https://qi-o.qoo10cdn.com/goods_image_big/5/7/0/3/9050935703_l.jpg" alt="Topic Image">
                     <div class="topic_title" id="topic5">Project Zomboid</div>
                 </a>
                 <a href="flatformer.html#sannabi" class="topic">
