--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
                     <div class="topic_title" id="topic5">Project Zomboid</div>
                 </a>
                 <a href="flatformer.html#sannabi" class="topic">
-                    <img src="img/fps.webp" alt="Topic Image">
+                    <img src="img/sannabi.png" alt="Topic Image">
                     <div class="topic_title" id="topic6">sannabi</div>
                 </a>
                 <a href="flatformer.html#skul" class="topic">
-                    <img src="img/fps.webp" alt="Topic Image">
+                    <img src="img/skul.png" alt="Topic Image">
                     <div class="topic_title" id="topic7">skul</div>
                 </a>
                 <a href="flatformer.html#myfriendpedro" class="topic">
-                    <img src="img/fps.webp" alt="Topic Image">
+                    <img src="myfriendpedro.png" alt="Topic Image">
                     <div class="topic_title" id="topic8">myfriendpedro</div>
                 </a>
             </div>
