--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="topic_title" id="topic7">skul</div>
                 </a>
                 <a href="flatformer.html#myfriendpedro" class="topic">
-                    <img src="myfriendpedro.png" alt="Topic Image">
+                    <img src="img/myfriendpedro.png" alt="Topic Image">
                     <div class="topic_title" id="topic8">myfriendpedro</div>
                 </a>
             </div>
