--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </a>
                 <a href="flatformer.html#sannabi" class="topic">
                     <img src="img/sannabi.png" height="320px" alt="Topic Image">
-                    <div class="topic_title" id="topic6">sannabi</div>
+                    <div class="topic_title" id="topic6">sanabi</div>
                 </a>
                 <a href="flatformer.html#skul" class="topic">
                     <img src="img/skul.png" height="320px" lt="Topic Image">
