--- a/PSH.html
+++ b/PSH.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="main.js" defer></script>
     <style>
+        body {
+            background-color : #F4F3EA;
+        }
          #top{
             float: inline-end;
         }
