--- a/topic1.html
+++ b/topic1.html
@@ -59,7 +59,7 @@
         <div class="game" id="game1">
             <div class="game_iv">
                 <div class="game_img">
-                    <img src="img/osu!.webp">
+                    <img src="img/osu!.png">
                     <div class="game_title">OSU!</div>
                 </div>
                 <div class="game_text">
